adding content and image

--- a/html/physicalModel.html
+++ b/html/physicalModel.html
@@ -21,33 +21,39 @@
     </div>
     <div class="container">
         <div class="text-container">
-            <p class="subtitle-text">PLACEHOLDER</p>
             <br>
-            <p class="subtitle-text">PLACEHOLDER</p>
+            <p class="subtitle-text">O que é?</p>
             <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, inventore modi! Maxime 
-                provident minima accusantium repellendus laborum. Dolores fugiat modi ex amet, eum omnis facilis, reiciendis nam libero
-                 adipisci iusto! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit corporis amet soluta sunt, esse rerum? 
-                 Enim delectus suscipit asperiores error! Commodi 
-                dipisci perspiciatis suscipit repellendus ipsum quidem qui numquam. Odit?
+                Sendo o ultimo passo da modelagem de dados antes 
+                da criação de um banco de dados em si, o modelo físico
+                segue trabalhando as características dos modelos
+                conceitual e lógico mais detalhadamente 
                 <br>
-                <br>
-                Representação grafica:
-                <br>
-                <img src="../assets/Entity.png" class="text-img">
             </p>
-            <p class="subtitle-text">PLACEHOLDER</p>
+            <p class="subtitle-text">Como funciona?</p>
             <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, inventore modi! Maxime 
-                provident minima accusantium repellendus laborum. Dolores fugiat modi ex amet, eum omnis facilis, reiciendis nam libero
-                 adipisci iusto! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit corporis amet soluta sunt, esse rerum? 
-                 Enim delectus suscipit asperiores error! Commodi 
-                dipisci perspiciatis suscipit repellendus ipsum quidem qui numquam. Odit?
+                Modelo físico de banco de dados é como o nome sugére
+                as estruturas físicas de armazenamento de dados, a 
+                análise das caracteristicas e recursos necessários
+                para armazenamento e manipulação das estruturas de 
+                dados.
                 <br>
+                Além disso, neste modelo temos detalhados os 
+                componentes da estrutura física do Banco de Dados,
+                como: tabelas, campos, tipos de valores e indices,
+                isso deve ser descrito nesse modelo e, só então
+                chegamos a criação do banco de dados, usando um
+                sistema gerenciador de banco de dados.
+                <br>
+                É nessa fase que propordionamos o detalhamento
+                de todo o banco de dados, detalhamento das tabelas,
+                dos campos, dos tipos de valores, indices de acesso,
+                apenas após esta etapa estamos aptos para a criação
+                propriamente dita do banco de dados.
                 <br>
                 Representação grafica:
                 <br>
-                <img src="../assets/Entity.png" class="text-img">
+                <img src="../assets/modelofisico.jpg" class="text-img">
             </p>
         </div>
     </div>
