--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -16,26 +16,19 @@
     <nav class="navbar">
       <span class="navBarLeft">
         <h3 class="navBarTitle">Placeholder</h3>
-        <img
+        <a  href="../index.html"><img
           src="../assets/Logo.jpg"
           alt="brand-logo.png"
           class="nav-logo"
         />
+      </a>
       </span>
       <section class="links">
         <a
-          href=""
+          href="../index.html"
           class="aLink"
           >Home</a
         >
-        <div class="dropdown">
-          <button class="dropbtn aLink">Dropdown</button>
-          <div class="dropdown-content">
-            <a href="#">Penis pequeno</a>
-            <a href="#">Penis médio</a>
-            <a href="#">Penis grande</a>
-          </div>
-        </div>
         <a
           href=""
           class="aLink"
