--- a/html/howToBuildEfficientDB.html
+++ b/html/howToBuildEfficientDB.html
@@ -13,9 +13,8 @@
           ><img src="../assets/Logo.jpg" width="80vh" height="80vh"
         /></a>
         <ul class="ul">
-          <li class="li"><a href="#" class="a" id="active">Home</a></li>
-          <li class="li"><a href="#" class="a">Dropdown</a></li>
-          <li class="li"><a href="#" class="a">Quem somos</a></li>
+          <li class="li"><a href="../index.html" class="a" id="active">Home</a>
+          <li class="li"><a href="aboutUs.html" class="a">Quem somos</a></li>
         </ul>
       </header>
       <section class="section">
