--- a/html/conceptualModel.html
+++ b/html/conceptualModel.html
@@ -10,8 +10,7 @@
     <header class="header">
         <a href="../index.html" class="logo"><img src="../assets/Logo.jpg" width="80vh" height="80vh"></a>
         <ul class="ul">
-            <li class="li"><a href="#" class="a" id="active">Home</a></li>
-            <li class="li"><a href="#" class="a">Dropdown</a></li>
+            <li class="li"><a href="../index.html" class="a" id="active">Home</a>
             <li class="li"><a href="./aboutUs.html" class="a">Quem somos</a></li>
         </ul>
     </header>
