adding an image to the page

--- a/html/conceptualModel.html
+++ b/html/conceptualModel.html
@@ -61,7 +61,7 @@
                 <br>
                 Representação grafica:
                 <br>
-                <img src="../assets/Entity.png" class="text-img">
+                <img src="../assets/Concept2.png" class="text-img">
             </p>
 
             <p class="subtitle-text">Cardinalidade</p>
