--- a/html/howToBuildEfficientDB.html
+++ b/html/howToBuildEfficientDB.html
@@ -19,7 +19,7 @@
       </header>
       <section class="section">
         <img src="../assets/Modelos.png" class="img" />
-        <h2 id="text">Como construir<br> um DB eficiente</h2>
+        <div class="title-DB">Como construir uma <br>base de dados eficiente</div>
       </section>
 
       <div class="container">
