--- a/html/introductionToDataModeling.html
+++ b/html/introductionToDataModeling.html
@@ -18,9 +18,10 @@
         <li class="li"><a href="./aboutUs.html" class="a">Quem somos</a></li>
       </ul>
   </header>
+  
   <section class="section">
       <img src="../assets/Modelos.png" class="img">
-      <h2 id="text">introdução a modelagem de dados</h2>
+      <div class="title-introductionToDataModeling">introdução a <br>modelagem de dados</div>
   </section>
     
       <div class="container">
