--- a/html/mainStepsToDataModeling.html
+++ b/html/mainStepsToDataModeling.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="../style/index.css" />
     <title>Principais passos para modelagem de dados</title>
   </head>
-
+  
   <body>
+    <div class="page-modelagem">
+
     <header class="header">
       <a href="../index.html" class="logo"><img src="../assets/Logo.jpg" width="80vh" height="80vh"></a>
       <ul class="ul">
@@ -16,11 +18,10 @@
       </ul>
   </header>
 
-    <div class="page-modelagem">
-        <div class="image-container">
-          <img src="../assets/Modelos.png" class="img">
-          <div class="title">Principais passos para modelagem de dados</div>
-        </div>
+  <section class="section">
+      <img src="../assets/Modelos.png" class="img">
+      <div class="title-introductionToDataModeling">Principais etapas para <br>modelagem de dados</div>
+  </section>
 
         <div class="container">
           <div class="text-container">
