--- a/html/physicalModel.html
+++ b/html/physicalModel.html
@@ -55,6 +55,26 @@
                 <br>
                 <img src="../assets/modelofisico.jpg" class="text-img">
             </p>
+            <br>
+            <p class="subtitle-text">Sistema Gerenciador de Banco de Dados (SGBD)</p>
+            <p class="text">
+                São programas utilizados para gerenciar a estrutura
+                e as informações dos banco de dados. Suas funções
+                incluem: transformar e apresentar dados, controlar
+                 o acesso de multiusuario e as interfaces de comunicação
+                 do banco de dados. Os programas usados em um SGBD
+                  permitem a criação de estruturas, manutenção dos
+                  dados, gerenciamento de transações e extração de
+                  informações com objetivo de consultas, relatórios,
+                   etc.
+                   <br>
+                   Funciona como um intermediario entre as aplicações 
+                   e a base de dados. Existem certas divisões entre os
+                   tipos de SGBD, como por exemplo: os SGBDR (Sistema
+                    Gerenciador de Banco de Dados Relacional) e os
+                    chamados de NOSQL (Não relacionais).
+                <br>
+            </p>
         </div>
     </div>
 </body>
