finishing the module

--- a/html/conceptualModel.html
+++ b/html/conceptualModel.html
@@ -80,7 +80,9 @@
                         a varias entidades Y e vice-versa.
                     </li>
                   </ul> <br>
-
+                  <br>
+                  <img src="../assets/Cardinalidade.png" class="text-img">
+                  <br><br>
             </p>
 
             <p class="subtitle-text">Atributo</p>
@@ -121,10 +123,16 @@
                 <br>
                 Representação grafica:
                 <br>
-                <img src="../assets/Entity.png" class="text-img">
+                <img src="../assets/attribute.png" class="text-img">
             </p>
             </p>
         </div>
+
+        <div class="text">
+            <a href="../index.html">Voltar para tela de cards!</a>
+          </div>
+
+
     </div>
 </body>
 </html>
