fixing some details

--- a/html/mainStepsToDataModeling.html
+++ b/html/mainStepsToDataModeling.html
@@ -31,12 +31,14 @@
               o como esse processo é criado, seus símbolos ou quais são os passos necessários? <br>
               O processo de modelagem de dados consiste principalmente no cumprimento de 8 passos, sendo eles:<br><br>
               <ol class="text">
-                <li class="li-mainStepsToDataModeling">Identificação das entidades.</li>
-                <li class="li-mainStepsToDataModeling">Identificação das principais propriedades de cada entidade.</li>
-                <li class="li-mainStepsToDataModeling">Identificar relacionamentos entre entidades.</li>
-                <li class="li-mainStepsToDataModeling">Mapear atributos para entidades completamente.</li>
-                <li class="li-mainStepsToDataModeling">Normalização, redução de redundâncias e melhora de desempenho.</li>
-                <li class="li-mainStepsToDataModeling">Finalização e validação do modelo de dados.</li>
+                <li class="li-mainStepsToDataModeling">Entendimento do problema e levantamento dos requisitos.</li>
+                <li class="li-mainStepsToDataModeling">Criacão do Modelo Entidade Relacionamento (MER).</li>
+                <li class="li-mainStepsToDataModeling">Criacão de um Diagrama Entidade Relacionamento (DER).</li>
+                <li class="li-mainStepsToDataModeling">Definição das cardinalidade de relacionamento.</li>
+                <li class="li-mainStepsToDataModeling">Definição de Um modelo Lógico.</li>
+                <li class="li-mainStepsToDataModeling">Normalização das Tabelas.</li>
+                <li class="li-mainStepsToDataModeling">Criacão de um dicionário de dados.</li>
+                <li class="li-mainStepsToDataModeling">Implementação do modelo físico e realização de testes.</li>
               </ol>
             </p>
           </div>
