--- a/html/howToBuildEfficientDB.html
+++ b/html/howToBuildEfficientDB.html
@@ -107,7 +107,10 @@
             </p>
           </ul>
         </div>
-      </div>
+        <div class="text">
+          <a href="../index.html">Voltar para tela de cards!</a>
+        </div>
+      </div>      
     </div>
   </body>
 </html>
