--- a/html/logicModel.html
+++ b/html/logicModel.html
@@ -134,6 +134,9 @@
                     
             </p>
         </div>
+        <div class="text">
+            <a href="../index.html">Voltar para tela de cards!</a>
+          </div>
     </div>
 </body>
 </html>
