--- a/html/physicalModel.html
+++ b/html/physicalModel.html
@@ -76,6 +76,9 @@
                 <br>
             </p>
         </div>
+        <div class="text">
+            <a href="../index.html">Voltar para tela de cards!</a>
+          </div>
     </div>
 </body>
 </html>
