fixing some details

--- a/html/logicModel.html
+++ b/html/logicModel.html
@@ -46,7 +46,7 @@
                 <br>
                 Representação grafica:
                 <br>
-                <img src="../assets/rede.jpg" class="text-img">
+                <img src="../assets/rede.jpg" class="text-img2">
                 <br>
                 <br>
                 Modelo Hierárquico: similar ao moduloem rede, mas os registros 
@@ -55,7 +55,7 @@
                 <br>
                 Representação grafica:
                 <br>
-                <img src="../assets/hierarchicalmodel.jpg" class="text-img">
+                <img src="../assets/hierarchicalmodel.jpg" class="text-img2">
                 <br>
                 <br>
                 Modelo Orientado a Objetos: nos leva a imaginar que os dados
@@ -65,7 +65,7 @@
                 <br>
                 Representação grafica:
                 <br>
-                <img src="../assets/MOO.jpg" class="text-img">
+                <img src="../assets/MOO.jpg" class="text-img2">
                 <br>
                 <br>
                 Modelo Relacional: utiliza um conjunto de tabelas que são
@@ -74,7 +74,7 @@
                 <br>
                 Representação grafica:
                 <br>
-                <img src="../assets/relacional2.jpg" class="text-img">
+                <img src="../assets/relacional2.jpg" class="text-img2">
                 <br>
             </p>
 
@@ -92,7 +92,7 @@
                 <br>
                 Representação grafica:
                 <br>
-                <img src="../assets/Relacional1.png" class="text-img">
+                <img src="../assets/Relacional1.png" class="text-img2">
             </p>
             <p class="subtitle-text">Chaves:</p>
             <p class="text">
