--- a/index.html
+++ b/index.html
@@ -22,29 +22,29 @@
     </nav>
     <h1 class="courses-section-title">Nossos cursos</h1>
     <section class="courses">
-      <div class="course-card">
+      <div class="course-card how-to-model-data">
+        <h2 class="course-title">O que é modelagem de dados?</h2>
+      </div>
+      <div class="course-card main-function-model-data">
+        <h2 class="course-title">Principais etapas da modelagem de dados</h2>
+      </div>
+      <div class="course-card how-to-build">
+        <h2 class="course-title">Como construir uma base de dados eficiente</h2>
+      </div>
+      <div class="course-card notation-data">
+        <h2 class="course-title">Notações de modelagem de dados</h2>
+      </div>
+      <div class="course-card model-data">
         <h2 class="course-title">Modelagem de dados</h2>
       </div>
-      <div class="course-card">
-        <h2 class="course-title">Modelagem de dados</h2>
+      <div class="course-card conceitual_model">
+        <h2 class="course-title">Modelo conceitual</h2>
       </div>
-      <div class="course-card">
-        <h2 class="course-title">Modelagem de dados</h2>
+      <div class="course-card physic_model">
+        <h2 class="course-title">Modelo físico</h2>
       </div>
-      <div class="course-card">
-        <h2 class="course-title">Modelagem de dados</h2>
-      </div>
-      <div class="course-card">
-        <h2 class="course-title">Modelagem de dados</h2>
-      </div>
-      <div class="course-card">
-        <h2 class="course-title">Modelagem de dados</h2>
-      </div>
-      <div class="course-card">
-        <h2 class="course-title">Modelagem de dados</h2>
-      </div>
-      <div class="course-card">
-        <h2 class="course-title">Modelagem de dados</h2>
+      <div class="course-card logic_model">
+        <h2 class="course-title">Modelo lógico</h2>
       </div>
     </section>
   </div>
