Fixed crazy ahh codes

--- a/html/conceptualModel.html
+++ b/html/conceptualModel.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="../style/index.css" />
     <title>Conceptual Model</title>
 </head>
-<body class="principal-container">
+<body class="principal-container-conceptualModel">
+
     <header class="header">
         <a href="../index.html" class="logo"><img src="../assets/Logo.jpg" width="80vh" height="80vh"></a>
         <ul class="ul">
@@ -14,27 +15,30 @@
             <li class="li"><a href="./aboutUs.html" class="a">Quem somos</a></li>
         </ul>
     </header>
-    <div class="image-container">
-        <img src="../assets/Modelos.png" class="img">
-        <div class="title">Modelo Conceitual</div>
-    </div>
-    <div class="container">
-        <div class="text-container">
-            <p class="subtitle-text">O que é?</p>
-            <p class="text">
+
+    <section class="section-conceptualModel">
+        <img src="../assets/Modelos.png" class="img-conceptualModel" />
+        <div class="title-conceptualModel">
+          introdução a <br />modelagem de dados
+        </div>
+      </section>
+
+    <div class="container-conceptualModel">
+        <div class="text-container-conceptualModel">
+            <p class="subtitle-text-conceptualModel">O que é?</p>
+            <p class="text-conceptualModel">
                 Também chamados de modelos de domínio, o modelo de dados
                  conceituais oferece uma visão geral do que o sistema terá
                   e como será organizado. Esse tipo de modelo costuma ser
                    utilizado como parte de um processo de coleta de requisitos
                     iniciais do projeto.
                 <br>
-
             </p>
 
-            <p class="subtitle-text">Conceitos</p>
+            <p class="subtitle-text-conceptualModel">Conceitos</p>
             <br>
-            <p class="subtitle-text">Entidade</p>
-            <p class="text">
+            <p class="subtitle-text-conceptualModel">Entidade</p>
+            <p class="text-conceptualModel">
                 Pode ser tanto algo real (animais, pessoas, objetos,etc)
                  como um conceito (trabalho, projeto, empresa), deve ser
                   identificada logo na engenharia de requisitos e representa
@@ -48,8 +52,8 @@
                 <img src="../assets/Entity.png" class="text-img">
             </p>
 
-            <p class="subtitle-text">Relacionamento</p>
-            <p class="text"> 
+            <p class="subtitle-text-conceptualModel">Relacionamento</p>
+            <p class="text-conceptualModel"> 
                 É a associação entre uma ou mais entidades. 
                 A quantidade de entidades que participam de uma associação 
                 determina o grau de relacionamento (Unário, Binário, 
@@ -64,12 +68,12 @@
                 <img src="../assets/Concept2.png" class="text-img">
             </p>
 
-            <p class="subtitle-text">Cardinalidade</p>
-            <p class="text">
+            <p class="subtitle-text-conceptualModel">Cardinalidade</p>
+            <p class="text-conceptualModel">
                 A Cardinalidade determina o número de ocorrências que uma
                 instância de uma entidade pode estar associada via um relacionamento. <br>
                 Tipos:
-                <ul class="text">
+                <ul class="text-conceptualModel">
                     <li class="li-mainStepsToDataModeling">Um para um (1:1) - Uma entidade X está associada
                         a no máximo a uma entidade Y e vice-versa;
                     </li>
@@ -85,8 +89,8 @@
                   <br><br>
             </p>
 
-            <p class="subtitle-text">Atributo</p>
-            <p class="text">
+            <p class="subtitle-text-conceptualModel">Atributo</p>
+            <p class="text-conceptualModel">
                 Atributos são características ou propriedades que descrevem
                  uma entidade em um banco de dados. Em um diagrama de
                   Entidade-Relacionamento (ER), eles são representados por 
@@ -96,7 +100,7 @@
                     "Aluno", atributos como "Nome", "Idade" e "Matrícula"
                      descrevem diferentes aspectos de cada aluno.
                      Atributos são divididos entre alguns tipos:
-                     <ul class="text">
+                     <ul class="text-conceptualModel">
                         <li class="li-mainStepsToDataModeling">
                             Simples (ou Atômicos): São indivisiveis;
                         </li>
@@ -113,8 +117,8 @@
                             Derivados: Possuem uma relação com um outro atributo.
                         </li> <br>
                       </ul> <br>
-                      <p class="subtitle-text">Atributo Identificador</p>
-                      <p class="text">
+                      <p class="subtitle-text-conceptualModel">Atributo Identificador</p>
+                      <p class="text-conceptualModel">
                       Atributo Identificador é o mesmo que uma Chave Primaria,
                        um ou mais atributos cujos valores distinguem uma ocorrência 
                        das outras da mesma entidade. <br>
@@ -128,7 +132,7 @@
             </p>
         </div>
 
-        <div class="text">
+        <div class="text-conceptualModel">
             <a href="../index.html">Voltar para tela de cards!</a>
           </div>
 
