--- a/html/howToBuildEfficientDB.html
+++ b/html/howToBuildEfficientDB.html
@@ -8,24 +8,26 @@
   </head>
   <body>
     <div class="page-dataBase">
+
       <header class="header">
-        <a href="../index.html" class="logo"
-          ><img src="../assets/Logo.jpg" width="80vh" height="80vh"
-        /></a>
+        <a href="../index.html" class="logo">
+          <img src="../assets/Logo.jpg" width="80vh" height="80vh"/>
+        </a>
         <ul class="ul">
           <li class="li"><a href="../index.html" class="a" id="active">Home</a>
           <li class="li"><a href="aboutUs.html" class="a">Quem somos</a></li>
         </ul>
       </header>
-      <section class="section">
-        <img src="../assets/Modelos.png" class="img" />
+
+      <section class="section-dataBase">
+        <img src="../assets/Modelos.png" class="img-dataBase" />
         <div class="title-DB">Como construir uma <br>base de dados eficiente</div>
       </section>
 
-      <div class="container">
-        <div class="text-container">
-          <p class="subtitle-text">Você sabe o que é um DB?</p>
-          <p class="text">
+      <div class="container-dataBase">
+        <div class="text-container-dataBase">
+          <p class="subtitle-text-DB">Você sabe o que é um DB?</p>
+          <p class="text-DB">
             Para começarmos a falar sobre banco de dados é importante ter
             conhecimento de alguns fundamentos e nomenclaturas sobre banco de
             dados, vamos ver algumas!<br />
@@ -40,9 +42,9 @@
             frente.
           </p>
         </div>
-        <div class="text-container">
-          <p class="subtitle-text">O que é um bom design de DB?</p>
-          <p class="text">
+        <div class="text-container-dataBase">
+          <p class="subtitle-text-DB">O que é um bom design de DB?</p>
+          <p class="text-DB">
             Existem alguns principios sobre Db que foram estabelecidos pelo
             mundo, um deles seriam as chamadas redundâncias ou informações
             duplicadas, elas são ruins por que geralmente diminuem a performance
@@ -56,15 +58,15 @@
           </p>
         </div>
 
-        <div class="text-container">
-          <p class="subtitle-text">O design do DB.</p>
-          <p class="text">
+        <div class="text-container-dataBase">
+          <p class="subtitle-text-DB">O design do DB.</p>
+          <p class="text-DB">
             É importante ressaltar que cada DB tem diferentes propósitos, então
             cada db vai ter um design diferente! Mas geralmente os Dbs seguem
             esses passos:<br />
           </p>
 
-          <ul class="text">
+          <ul class="text-DB">
             <li class="li-dataBase">Determinar a função do DB.</li>
             <p class="p-dataBase">
               Isso vai ajudar a concluir os próximos passos.
@@ -107,7 +109,7 @@
             </p>
           </ul>
         </div>
-        <div class="text">
+        <div class="text-DB">
           <a href="../index.html">Voltar para tela de cards!</a>
         </div>
       </div>      
