--- a/html/howToModelData.html
+++ b/html/howToModelData.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="../style/index.css" />
     <title>Como Modelar Dados</title>
 </head>
-<body class="principal-container">
+<body class="principal-container-howToModelData">
+
     <header class="header">
         <a href="../index.html" class="logo"><img src="../assets/Logo.jpg" width="80vh" height="80vh"></a>
         <ul class="ul">
@@ -14,11 +15,16 @@
             <li class="li"><a href="./aboutUs.html" class="a">Quem somos</a></li>
         </ul>
     </header>
-    <section class="section">
-        <img src="../assets/Modelos.png" class="img">
-        <h2 id="text">Como Modelar Dados</h2>
-    </section>
-    <div class="sec">
+
+    <section class="section-howToModelData">
+        <img src="../assets/Modelos.png" class="img-howToModelData" />
+        <div class="title-howToModelData">
+          Como modelar dados
+        </div>
+      </section>
+
+
+    <div class="sec-howToModelData">
         <h2>Placeholder</h2>
         <p>Ll orem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae illum exercitationem, 
             ipsa commodi distinctio velit reprehenderit accusantium eius, natus, iste alias. 
