--- a/html/introductionToDataModeling.html
+++ b/html/introductionToDataModeling.html
@@ -8,11 +8,12 @@
   </head>
 
   <body>
-    <div class="page-modelagem">
+    <div class="page-introductionToDataModeling">
+
       <header class="header">
-        <a href="../index.html" class="logo"
-          ><img src="../assets/Logo.jpg" width="80vh" height="80vh"
-        /></a>
+        <a href="../index.html" class="logo" >
+          <img src="../assets/Logo.jpg" width="80vh" height="80vh"/>
+        </a>
         <ul class="ul">
           <li class="li">
             <a href="../index.html" class="a" id="active">Home</a>
@@ -21,17 +22,17 @@
         </ul>
       </header>
 
-      <section class="section">
-        <img src="../assets/Modelos.png" class="img" />
+      <section class="section-introductionToDataModeling">
+        <img src="../assets/Modelos.png" class="img-introductionToDataModeling" />
         <div class="title-introductionToDataModeling">
           introdução a <br />modelagem de dados
         </div>
       </section>
 
-      <div class="container">
-        <div class="text-container">
-          <p class="subtitle-text">Primeira vez vendo o curso?</p>
-          <p class="text">
+      <div class="container-introductionToDataModeling">
+        <div class="text-container-introductionToDataModeling">
+          <p class="subtitle-text-introductionToDataModeling">Primeira vez vendo o curso?</p>
+          <p class="text-introductionToDataModeling">
             Já parou para pensar como as pequenas e grandes empresas projetam e
             se preparam para executar projetos de grande escopo? Como são
             utilizados os dados coletados por elas? Ou até mesmo como todos do
@@ -40,9 +41,9 @@
             introdução a modelagem de dados!
           </p>
         </div>
-        <div class="text-container">
-          <p class="subtitle-text">Introdução a modelagem de dados.</p>
-          <p class="text">
+        <div class="text-container-introductionToDataModeling">
+          <p class="subtitle-text-introductionToDataModeling">Introdução a modelagem de dados.</p>
+          <p class="text-introductionToDataModeling">
             A modelagem de dados é o processo de criação de um esquema visual de
             um sistema, seus dados, suas ligações e como se relacionam. Esse
             diagrama ajuda partes distintas do projeto, como engenheiros,
@@ -64,9 +65,9 @@
             <br />
           </p>
         </div>
-        <div class="text-container">
-          <p class="subtitle-text">Conteúdo do curso.</p>
-          <ul class="text">
+        <div class="text-container-introductionToDataModeling">
+          <p class="subtitle-text-introductionToDataModeling">Conteúdo do curso.</p>
+          <ul class="text-introductionToDataModeling">
             <li class="li-introductionToDataModeling">
               Principais etapas da modelagem de dados.
             </li>
@@ -83,25 +84,25 @@
           </ul>
         </div>
 
-        <div class="text-container">
-          <p class="subtitle-text">
+        <div class="text-container-introductionToDataModeling">
+          <p class="subtitle-text-introductionToDataModeling">
             Pronto para testar<br />
             seu conhecimento?
           </p>
-          <p class="text">
+          <p class="text-introductionToDataModeling">
             Aqui vai um pequeno questionário para avaliar seu conhecimento! Não
             se preocupe pois as questões são apenas para testar seu conhecimento
             sobre este módulo!
           </p>
           <br />
-          <p class="text">Quais empresas podem usar da modelagem de dados?</p>
+          <p class="text-introductionToDataModeling">Quais empresas podem usar da modelagem de dados?</p>
 
           <form class="form-introductionToDataModeling">
 
             <div class="radioItem-introductionToDataModeling">
               <input type="radio" id="question1-A" name="question1" value="question1-A" class="radioButton-introductionToDataModeling"/>
               <label for="question1-A">
-                <p class="text">
+                <p class="text-introductionToDataModeling">
                   Apenas empresas de grande porte pois seus projetos envolvem
                   muitas pessoas, tecnologias e são muito complexos.
                 </p>
@@ -111,7 +112,7 @@
             <div class="radioItem-introductionToDataModeling">
               <input type="radio" id="question1-B" name="question1" value="question1-B" class="radioButton-introductionToDataModeling" />
               <label for="question1-B">
-                <p class="text">
+                <p class="text-introductionToDataModeling">
                   Apenas empresas de pequeno porte pois seus projetos envolvem
                   poucas pessoas, tecnologias e são menos complexos, o que
                   possibilita o uso da modelagem de dados.
@@ -126,19 +127,19 @@
             <div class="radioItem-introductionToDataModeling">
               <input type="radio" id="question1-C" name="question1" value="question1-C" class="radioButton-introductionToDataModeling"/>
               <label for="question1-C">
-                <p class="text">
+                <p class="text-introductionToDataModeling">
                   Ambas podem utilizar a modelagem de dados, afinal a modelagem
                   de dados ajuda em qualquer tipo de projeto, não importa seu
                   escopo.
                 </p>
-                <p class="text" id="correctOption"></p>
+                <p class="text-introductionToDataModeling" id="correctOption"></p>
               </label>
             </div>
             <input type="button" value="Mostrar as respostas" class="submit" id="submit">
           </form>
         </div>
 
-        <div class="text">
+        <div class="text-introductionToDataModeling">
           <a href="../index.html">Voltar para tela de cards!</a>
         </div>
       </div>
