--- a/html/logicModel.html
+++ b/html/logicModel.html
@@ -6,23 +6,33 @@
     <link rel="stylesheet" href="../style/index.css" />
     <title>Logic Model</title>
 </head>
-<body class="principal-container">
-    <header class="header">
-        <a href="../index.html" class="logo"><img src="../assets/Logo.jpg" width="80vh" height="80vh"></a>
-        <ul class="ul">
-            <li class="li"><a href="../index.html" class="a" id="active">Home</a>
-            <li class="li"><a href="./aboutUs.html" class="a">Quem somos</a></li>
-        </ul>
-    </header>
-    <div class="image-container">
-        <img src="../assets/Modelos.png" class="img">
-        <div class="title">Modelo Lógico</div>
-    </div>
-    <div class="container">
-        <div class="text-container">
+<body class="principal-container-logicModel">
 
-            <p class="subtitle-text">Modelo Lógico de BD</p>
-            <p class="text">
+    <header class="header">
+        <a href="../index.html" class="logo" >
+          <img src="../assets/Logo.jpg" width="80vh" height="80vh"/>
+        </a>
+        <ul class="ul">
+          <li class="li">
+            <a href="../index.html" class="a" id="active">Home</a>
+          </li>
+          <li class="li"><a href="./aboutUs.html" class="a">Quem somos</a></li>
+        </ul>
+      </header>
+
+
+    <section class="section-logicModel">
+    <img src="../assets/Modelos.png" class="img-logicModel" />
+    <div class="title-logicModel">
+      Modelo lógico
+    </div>
+  </section>
+
+    <div class="container-logicModel">
+        <div class="text-container-logicModel">
+
+            <p class="subtitle-text-logicModel">Modelo Lógico de BD</p>
+            <p class="text-logicModel">
                 Depois de termos um modelo conceitual de dados definido,
                 a proxima etapa de um projeto de Banco de Dados é a
                 construção de um modelo lógico. O modelo lógico descreve
@@ -39,7 +49,7 @@
         
             </p>
 
-            <p class="text">
+            <p class="text-logicModel">
                 Modelo de Rede: ele é representado por um conjunto de registros,
                 e as relações são efetivadas por meio de ponteiros;
                 <br>
@@ -94,13 +104,13 @@
                 <br>
                 <img src="../assets/Relacional1.png" class="text-img2">
             </p>
-            <p class="subtitle-text">Chaves:</p>
-            <p class="text">
+            <p class="subtitle-text-logicModel">Chaves:</p>
+            <p class="text-logicModel">
                 Identifica linhas e relaciona tabelas em um Banco de Dados
                  Relacional. <br>
                  Em um Banco de Dados Relacional, basicamente, existem 3
                  que devem ser considerados:
-                 <ul class="text">
+                 <ul class="text-logicModel">
                     <li class="li-mainStepsToDataModeling">
                         Chave Primaria;
                     </li>
@@ -111,7 +121,7 @@
                         Chave Candidata.
                   </ul>
                    <br>
-                   <p class="text">
+                   <p class="text-logicModel">
                    Chave Primária: Uma coluna (ou uma combinação delas)
                    cujos valores distinguem uma linha das demais dentro
                    de uma mesma tabela. Uma chave primária não pode conter
@@ -134,7 +144,7 @@
                     
             </p>
         </div>
-        <div class="text">
+        <div class="text-logicModel">
             <a href="../index.html">Voltar para tela de cards!</a>
           </div>
     </div>
