--- a/html/physicalModel.html
+++ b/html/physicalModel.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="../style/index.css" />
     <title>Physical Model</title>
 </head>
-<body class="principal-container">
+<body class="principal-container-physicalModel">
+
     <header class="header">
         <a href="../index.html" class="logo"><img src="../assets/Logo.jpg" width="80vh" height="80vh"></a>
         <ul class="ul">
@@ -14,23 +15,27 @@
             <li class="li"><a href="./aboutUs.html" class="a">Quem somos</a></li>
         </ul>
     </header>
-    <div class="image-container">
-        <img src="../assets/Modelos.png" class="img">
-        <div class="title">Modelo Físico</div>
-    </div>
-    <div class="container">
-        <div class="text-container">
+
+    <section class="section-physicalModel">
+        <img src="../assets/Modelos.png" class="img-physicalModel" />
+        <div class="title-physicalModel">
+          Modelo físico
+        </div>
+      </section>
+
+    <div class="container-physicalModel">
+        <div class="text-container-physicalModel">
             <br>
-            <p class="subtitle-text">O que é?</p>
-            <p class="text">
+            <p class="subtitle-text-physicalModel">O que é?</p>
+            <p class="text-physicalModel">
                 Sendo o ultimo passo da modelagem de dados antes 
                 da criação de um banco de dados em si, o modelo físico
                 segue trabalhando as características dos modelos
                 conceitual e lógico mais detalhadamente 
                 <br>
             </p>
-            <p class="subtitle-text">Como funciona?</p>
-            <p class="text">
+            <p class="subtitle-text-physicalModel">Como funciona?</p>
+            <p class="text-physicalModel">
                 Modelo físico de banco de dados é como o nome sugére
                 as estruturas físicas de armazenamento de dados, a 
                 análise das caracteristicas e recursos necessários
@@ -56,8 +61,8 @@
                 <img src="../assets/modelofisico.jpg" class="text-img">
             </p>
             <br>
-            <p class="subtitle-text">Sistema Gerenciador de Banco de Dados (SGBD)</p>
-            <p class="text">
+            <p class="subtitle-text-physicalModel">Sistema Gerenciador de Banco de Dados (SGBD)</p>
+            <p class="text-physicalModel">
                 São programas utilizados para gerenciar a estrutura
                 e as informações dos banco de dados. Suas funções
                 incluem: transformar e apresentar dados, controlar
@@ -76,7 +81,7 @@
                 <br>
             </p>
         </div>
-        <div class="text">
+        <div class="text-physicalModel">
             <a href="../index.html">Voltar para tela de cards!</a>
           </div>
     </div>
