add icons to tabs of all pages

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
       href="../style/aboutUs.css"
     />
+    <link rel="icon" type="image/png" href="../assets/Logo.jpg">
   </head>
   <body>
     <nav class="navbar">
