--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style/index.css" />
-  <title>Modelagem de Dados</title>
+  <link rel="icon" type="image/png" href="./assets/Logo.jpg">
+  <title>Learning door</title>
 </head>
 
 <body>
   <div class="content">
     <nav class="navbar">
       <span class="navBarLeft">
-        <h3 class="navBarTitle">Placeholder</h3>
+        <h3 class="navBarTitle">Learning door</h3>
         <img src="./assets/Logo.jpg" alt="brand-logo.png" class="nav-logo">
       </span>
       <section class="links">
