--- a/html/howToBuildEfficientDB.html
+++ b/html/howToBuildEfficientDB.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Como construir um DB eficiente</title>
     <link rel="stylesheet" href="../style/index.css" />
+    <link rel="icon" type="image/png" href="../assets/Logo.jpg">
   </head>
   <body>
     <div class="page-dataBase">
