--- a/html/mainStepsToDataModeling.html
+++ b/html/mainStepsToDataModeling.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style/index.css" />
+    <link rel="icon" type="image/png" href="../assets/Logo.jpg">
     <title>Principais passos para modelagem de dados</title>
   </head>
   
