Added an easterEgg

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -59,10 +59,11 @@
     </div>
 
     <div class="team-member">
-        <img src="../assets/liminha.jpg" alt="Foto do Nome do Membro 3" class="member-picture" >
+        <img src="../assets/liminha.jpg" alt="Foto do Nome do Membro 3" class="member-picture" id="homemDeRespeito" >
         <div>
             <h3>Thiago Akiama</h3>
-            <p>Com habilidades em [descrição breve], Thiago trouxe inovação para [uma parte do projeto].</p>
+            <p>Com habilidades em programar coisas e não sei mais, Thiago trouxe inovação para o projeto
+              trazendo uma grande parte da estrutura e design do site, além de refatorar o código inteiro para um melhor resultado.</p>
         </div>
     </div>
 
@@ -83,5 +84,6 @@
     </div>
       </section>
     </div> 
+    <script src="../javascript/easterEgg.js"></script>
   </body>
 </html>
