--- a/html/modelDataNotations.html
+++ b/html/modelDataNotations.html
@@ -3,10 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/index.css" />
     <link rel="icon" type="image/png" href="../assets/Logo.jpg">
-    <title>Document</title>
+    <title>Modelo de Notação</title>
 </head>
-<body>
-    <h1>notações fodas</h1>
+<body class="principal-container-logicModel">
+
+    <header class="header">
+        <a href="../index.html" class="logo">
+          <img src="../assets/Logo.jpg" width="80vh" height="80vh"/>
+        </a>
+        <ul class="ul">
+          <li class="li">
+            <a href="../index.html" class="a" id="active">Home</a>
+          </li>
+          <li class="li"><a href="./aboutUs.html" class="a">Quem somos</a></li>
+        </ul>
+    </header>
+
+    <section class="section-logicModel">
+        <img src="../assets/Modelos.png" class="img-logicModel" />
+        <div class="title-logicModel">
+            Notação de Modelagem de Dados
+        </div>
+    </section>
+
+    <div class="container-logicModel">
+        <div class="text-container-logicModel">
+
+            <p class="subtitle-text-logicModel">Notação de Modelagem de Dados</p>
+            <p class="text-logicModel">
+                Após a definição de um modelo conceitual de dados, a próxima etapa em um projeto de Banco de Dados é a construção de um modelo lógico. O modelo lógico descreve as estruturas que serão armazenadas no Banco de Dados, representando graficamente os dados de uma forma lógica. A técnica de modelagem de dados mais amplamente utilizada é a abordagem entidade-relacionamento, que permite a construção de Diagramas de Entidade-Relacionamento (DER). <br>
+                Existem várias notações de modelagem de dados, sendo a mais comum a notação relacional.
+                <br><br><br>
+            </p>
+
+            <p class="text-logicModel">
+                Notação de Rede: é representada por um conjunto de registros, onde as relações são realizadas por meio de ponteiros;
+                <br><br>
+                Representação gráfica:
+                <br>
+                <img src="../assets/rede.jpg" class="text-img2">
+                <br><br>
+                Notação Hierárquica: similar à notação em rede, mas os registros são armazenados em uma estrutura de árvore;
+                <br><br>
+                Representação gráfica:
+                <br>
+                <img src="../assets/hierarchicalmodel.jpg" class="text-img2">
+                <br><br>
+                Notação Orientada a Objetos: sugere que os dados são armazenados em estruturas de objetos, conforme o nome indica;
+                <br><br>
+                Representação gráfica:
+                <br>
+                <img src="../assets/MOO.jpg" class="text-img2">
+                <br><br>
+                Notação Relacional: utiliza um conjunto de tabelas compostas por linhas e colunas.
+                <br><br>
+                Representação gráfica:
+                <br>
+                <img src="../assets/relacional2.jpg" class="text-img2">
+                <br>
+            </p>
+
+            <p class="subtitle-text">Notação Relacional</p>
+            <p class="text">
+                Um banco de dados relacional é composto por tabelas, que também são chamadas de relações. A terminologia "tabela" é mais comum em produtos comerciais e na prática. <br>
+                Tabelas consistem em um conjunto não ordenado de linhas (também chamadas de tuplas). Cada linha é composta por uma série de campos (atributos), e cada campo é identificado por um nome. O conjunto de campos de todas as linhas de uma tabela forma uma coluna.
+                <br><br>
+                Representação gráfica:
+                <br>
+                <img src="../assets/Relacional1.png" class="text-img2">
+            </p>
+            <p class="subtitle-text-logicModel">Chaves:</p>
+            <p class="text-logicModel">
+                As chaves identificam linhas e relacionam tabelas em um Banco de Dados Relacional. <br>
+                Em um Banco de Dados Relacional, existem basicamente 3 tipos de chaves que devem ser considerados:
+                <ul class="text-logicModel">
+                    <li class="li-mainStepsToDataModeling">
+                        Chave Primária;
+                    </li>
+                    <li class="li-mainStepsToDataModeling">
+                        Chave Estrangeira;
+                    </li>
+                    <li class="li-mainStepsToDataModeling">
+                        Chave Candidata.
+                    </li>
+                </ul>
+                <br>
+                <p class="text-logicModel">
+                    Chave Primária: Uma coluna (ou uma combinação delas) cujos valores distinguem uma linha das demais dentro da mesma tabela. Uma chave primária não pode conter valores nulos e não pode se repetir. Por exemplo: o CPF de um indivíduo.
+                    <br>
+                    Chave Estrangeira: Uma coluna (ou uma combinação de colunas) cujos valores aparecem obrigatoriamente na chave primária de uma tabela. Uma chave Estrangeira permite a implementação dos relacionamentos entre tabelas de um Banco de Dados Relacional.
+                    <br>
+                    Chave Candidata (ou Alternativa): Uma coluna (ou uma combinação de colunas) que é candidata a ser uma chave primária. Possui as mesmas características de uma chave primária, mas não foi escolhida pelo projetista do Banco de Dados Relacional.
+                </p>
+            </p>
+        </div>
+        <div class="text-logicModel">
+            <a href="../index.html">Voltar para a tela de cards!</a>
+        </div>
+    </div>
 </body>
 </html>
