refactoring page title

--- a/html/conceptualModel.html
+++ b/html/conceptualModel.html
@@ -20,7 +20,7 @@
     <section class="section-conceptualModel">
         <img src="../assets/Modelos.png" class="img-conceptualModel" />
         <div class="title-conceptualModel">
-          introdução a <br />modelagem de dados
+          Modelo conceitual
         </div>
       </section>
 
